[gd_scene load_steps=6 format=3 uid="uid://hhb310yww3fa"]

[ext_resource type="Theme" uid="uid://b7l5vs3ivsapn" path="res://ui/battle_preparation/unit_panel_not_selected.tres" id="1_mbejm"]
[ext_resource type="Script" path="res://ui/battle_preparation/unit_army_panel_container.gd" id="2_4scdy"]
[ext_resource type="Texture2D" uid="uid://da5b4ie8i1bal" path="res://resources/sprites/units/marauder.png" id="3_c0j05"]
[ext_resource type="Texture2D" uid="uid://baox2225sojam" path="res://resources/sprites/icons/Checked.png" id="4_qykro"]
[ext_resource type="Texture2D" uid="uid://cp5kul16nbb0c" path="res://resources/sprites/icons/Group 378.png" id="5_wec2y"]

[node name="UnitArmyPanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(300, 50)
offset_right = 302.0
offset_bottom = 52.0
focus_mode = 2
theme = ExtResource("1_mbejm")
script = ExtResource("2_4scdy")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 2
offset_right = 300.0
offset_bottom = 50.0
theme_override_constants/separation = 60
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2

[node name="UnitIcon" type="TextureRect" parent="MarginContainer/Panel/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("3_c0j05")
expand_mode = 2
stretch_mode = 3

[node name="UnitNameLabel" type="Label" parent="MarginContainer/Panel/HBoxContainer/HBoxContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
text = "Robert Bob Jr"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 1
theme_override_icons/checked = ExtResource("4_qykro")
theme_override_icons/unchecked = ExtResource("5_wec2y")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
